tests/ui/fail/borrowed_receiver_refs_are_not_send.stderr
error[E0277]: `*mut grafton_ndi::ndi_lib::NDIlib_recv_instance_type` cannot be sent between threads safely
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:8:19
  |
8 |     assert_send::<VideoFrameRef<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^ `*mut grafton_ndi::ndi_lib::NDIlib_recv_instance_type` cannot be sent between threads safely
  |
  = help: within `VideoFrameRef<'static>`, the trait `Send` is not implemented for `*mut grafton_ndi::ndi_lib::NDIlib_recv_instance_type`
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::VideoKind>`
 --> src/capture.rs
  |
  | pub struct RecvGuard<'rx, K: CaptureKind> {
  |            ^^^^^^^^^
note: required because it appears within the type `VideoFrameRef<'static>`
 --> src/frames.rs
  |
  | pub struct VideoFrameRef<'rx> {
  |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut u8` cannot be sent between threads safely
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:8:19
  |
8 |     assert_send::<VideoFrameRef<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^ `*mut u8` cannot be sent between threads safely
  |
  = help: within `VideoFrameRef<'static>`, the trait `Send` is not implemented for `*mut u8`
note: required because it appears within the type `grafton_ndi::ndi_lib::NDIlib_video_frame_v2_t`
 --> $OUT_DIR[grafton-ndi]/ndi_lib.rs
  |
  | pub struct NDIlib_video_frame_v2_t {
  |            ^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::VideoKind>`
 --> src/capture.rs
  |
  | pub struct RecvGuard<'rx, K: CaptureKind> {
  |            ^^^^^^^^^
note: required because it appears within the type `VideoFrameRef<'static>`
 --> src/frames.rs
  |
  | pub struct VideoFrameRef<'rx> {
  |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const i8` cannot be sent between threads safely
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:8:19
  |
8 |     assert_send::<VideoFrameRef<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^ `*const i8` cannot be sent between threads safely
  |
  = help: within `VideoFrameRef<'static>`, the trait `Send` is not implemented for `*const i8`
note: required because it appears within the type `grafton_ndi::ndi_lib::NDIlib_video_frame_v2_t`
 --> $OUT_DIR[grafton-ndi]/ndi_lib.rs
  |
  | pub struct NDIlib_video_frame_v2_t {
  |            ^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::VideoKind>`
 --> src/capture.rs
  |
  | pub struct RecvGuard<'rx, K: CaptureKind> {
  |            ^^^^^^^^^
note: required because it appears within the type `VideoFrameRef<'static>`
 --> src/frames.rs
  |
  | pub struct VideoFrameRef<'rx> {
  |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:8:19
  |
8 |     assert_send::<VideoFrameRef<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: within `VideoFrameRef<'static>`, the trait `Send` is not implemented for `Rc<()>`
note: required because it appears within the type `PhantomData<Rc<()>>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::VideoKind>`
 --> src/capture.rs
  |
  | pub struct RecvGuard<'rx, K: CaptureKind> {
  |            ^^^^^^^^^
note: required because it appears within the type `VideoFrameRef<'static>`
 --> src/frames.rs
  |
  | pub struct VideoFrameRef<'rx> {
  |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut grafton_ndi::ndi_lib::NDIlib_recv_instance_type` cannot be sent between threads safely
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:9:19
  |
9 |     assert_send::<AudioFrameRef<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^ `*mut grafton_ndi::ndi_lib::NDIlib_recv_instance_type` cannot be sent between threads safely
  |
  = help: within `AudioFrameRef<'static>`, the trait `Send` is not implemented for `*mut grafton_ndi::ndi_lib::NDIlib_recv_instance_type`
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::AudioKind>`
 --> src/capture.rs
  |
  | pub struct RecvGuard<'rx, K: CaptureKind> {
  |            ^^^^^^^^^
note: required because it appears within the type `AudioFrameRef<'static>`
 --> src/frames.rs
  |
  | pub struct AudioFrameRef<'rx> {
  |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut u8` cannot be sent between threads safely
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:9:19
  |
9 |     assert_send::<AudioFrameRef<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^ `*mut u8` cannot be sent between threads safely
  |
  = help: within `AudioFrameRef<'static>`, the trait `Send` is not implemented for `*mut u8`
note: required because it appears within the type `grafton_ndi::ndi_lib::NDIlib_audio_frame_v3_t`
 --> $OUT_DIR[grafton-ndi]/ndi_lib.rs
  |
  | pub struct NDIlib_audio_frame_v3_t {
  |            ^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::AudioKind>`
 --> src/capture.rs
  |
  | pub struct RecvGuard<'rx, K: CaptureKind> {
  |            ^^^^^^^^^
note: required because it appears within the type `AudioFrameRef<'static>`
 --> src/frames.rs
  |
  | pub struct AudioFrameRef<'rx> {
  |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const i8` cannot be sent between threads safely
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:9:19
  |
9 |     assert_send::<AudioFrameRef<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^ `*const i8` cannot be sent between threads safely
  |
  = help: within `AudioFrameRef<'static>`, the trait `Send` is not implemented for `*const i8`
note: required because it appears within the type `grafton_ndi::ndi_lib::NDIlib_audio_frame_v3_t`
 --> $OUT_DIR[grafton-ndi]/ndi_lib.rs
  |
  | pub struct NDIlib_audio_frame_v3_t {
  |            ^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::AudioKind>`
 --> src/capture.rs
  |
  | pub struct RecvGuard<'rx, K: CaptureKind> {
  |            ^^^^^^^^^
note: required because it appears within the type `AudioFrameRef<'static>`
 --> src/frames.rs
  |
  | pub struct AudioFrameRef<'rx> {
  |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:9:19
  |
9 |     assert_send::<AudioFrameRef<'static>>();
  |                   ^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: within `AudioFrameRef<'static>`, the trait `Send` is not implemented for `Rc<()>`
note: required because it appears within the type `PhantomData<Rc<()>>`
 --> $RUST/core/src/marker.rs
  |
  | pub struct PhantomData<T: PointeeSized>;
  |            ^^^^^^^^^^^
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::AudioKind>`
 --> src/capture.rs
  |
  | pub struct RecvGuard<'rx, K: CaptureKind> {
  |            ^^^^^^^^^
note: required because it appears within the type `AudioFrameRef<'static>`
 --> src/frames.rs
  |
  | pub struct AudioFrameRef<'rx> {
  |            ^^^^^^^^^^^^^
note: required by a bound in `assert_send`
 --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
  |
5 | fn assert_send<T: Send>() {}
  |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut grafton_ndi::ndi_lib::NDIlib_recv_instance_type` cannot be sent between threads safely
  --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:10:19
   |
10 |     assert_send::<MetadataFrameRef<'static>>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut grafton_ndi::ndi_lib::NDIlib_recv_instance_type` cannot be sent between threads safely
   |
   = help: within `MetadataFrameRef<'static>`, the trait `Send` is not implemented for `*mut grafton_ndi::ndi_lib::NDIlib_recv_instance_type`
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::MetadataKind>`
  --> src/capture.rs
   |
   | pub struct RecvGuard<'rx, K: CaptureKind> {
   |            ^^^^^^^^^
note: required because it appears within the type `MetadataFrameRef<'static>`
  --> src/frames.rs
   |
   | pub struct MetadataFrameRef<'rx> {
   |            ^^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
   |
 5 | fn assert_send<T: Send>() {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*mut i8` cannot be sent between threads safely
  --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:10:19
   |
10 |     assert_send::<MetadataFrameRef<'static>>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^ `*mut i8` cannot be sent between threads safely
   |
   = help: within `MetadataFrameRef<'static>`, the trait `Send` is not implemented for `*mut i8`
note: required because it appears within the type `grafton_ndi::ndi_lib::NDIlib_metadata_frame_t`
  --> $OUT_DIR[grafton-ndi]/ndi_lib.rs
   |
   | pub struct NDIlib_metadata_frame_t {
   |            ^^^^^^^^^^^^^^^^^^^^^^^
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::MetadataKind>`
  --> src/capture.rs
   |
   | pub struct RecvGuard<'rx, K: CaptureKind> {
   |            ^^^^^^^^^
note: required because it appears within the type `MetadataFrameRef<'static>`
  --> src/frames.rs
   |
   | pub struct MetadataFrameRef<'rx> {
   |            ^^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
   |
 5 | fn assert_send<T: Send>() {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<()>` cannot be sent between threads safely
  --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:10:19
   |
10 |     assert_send::<MetadataFrameRef<'static>>();
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
   |
   = help: within `MetadataFrameRef<'static>`, the trait `Send` is not implemented for `Rc<()>`
note: required because it appears within the type `PhantomData<Rc<()>>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `grafton_ndi::capture::RecvGuard<'static, grafton_ndi::capture::MetadataKind>`
  --> src/capture.rs
   |
   | pub struct RecvGuard<'rx, K: CaptureKind> {
   |            ^^^^^^^^^
note: required because it appears within the type `MetadataFrameRef<'static>`
  --> src/frames.rs
   |
   | pub struct MetadataFrameRef<'rx> {
   |            ^^^^^^^^^^^^^^^^
note: required by a bound in `assert_send`
  --> tests/ui/fail/borrowed_receiver_refs_are_not_send.rs:5:19
   |
 5 | fn assert_send<T: Send>() {}
   |                   ^^^^ required by this bound in `assert_send`
